--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.3",
     "eslint-config-next": "13.1.4",
+    "framer-motion": "^8.5.2",
     "next": "13.1.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
